--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Generate sub tracks from master subtitle file via swaps",
   "author": "Daiz <taneli.vatanen@gmail.com>",
-  "license": "GPL",
+  "license": "GPLv2",
   "main": "./lib/index.js",
   "dependencies": {
     "LiveScript": "~1.2.0",
